names and footer edits to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <body>
 
-    <header>
+  	<header>
       <div class="collapse bg-dark" id="navbarHeader">
         <div class="container">
           <div class="row">
@@ -32,15 +32,14 @@
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Devs</h4>
               <ul class="list-unstyled">
-                <li><a href="https://example.com" class="text-white">Ambuj</a></li>
-                <li><a href="https://example.com" class="text-white">Harsh</a></li>
-                <li><a href="https://example.com" class="text-white">Naman</a></li>
+                <li><a href="https://example.com" class="text-white">Ambuj Gupta</a></li>
+                <li><a href="https://example.com" class="text-white">Harsh Kataria</a></li>
+                <li><a href="https://example.com" class="text-white">Naman Bansal</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
@@ -61,12 +60,11 @@
           <h2 class="jumbotron-heading">Sukanya Rakshak Prototype#1</h2>
           <p class="lead text-muted">The data indicating intrusion for different modules placed at different locations is displayed below for the prototype model.</p>
           <p>
-            <a href="#" class="btn btn-primary my-2">Home</a>
-            <a href="#" class="btn btn-secondary my-2">Help</a>
+          	<a href="https://example.com" class="btn btn-primary my-2">Home</a>
+          	<a href="#" class="btn btn-secondary my-2">Help</a>
           </p>
         </div>
       </section>
-
       <div class="album py-5 bg-light">
         <div class="container">
 
@@ -183,13 +181,14 @@
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <p>Sukanya rakshak is a project and in an extensive development phase please stay calm and have your doubts cleared manually.</p>
-        <p>New to Sukanya rakshak? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>or better ask a dev.</p>
-      </div>
-      <div class="container">
-        <p>Copiryght © Harsh Kataria 2018</p>
+        <p>New to Sukanya rakshak? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a> or even better, ask a dev.</p>
       </div>
     </footer>
+    <footer>
+    	<div class="container">
+        	<p>Copiryght © Harsh Kataria 2018</p>
+      	</div>
+  	</footer>
 
 
 
