--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="WebApp for Poject_Sukanya_Rakshak">
     <meta name="author" content="Harsh_Kataria">
     <link rel="icon" href="sricon.ico">
-
+    <link rel="manifest" href="/manifest.json">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
