--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Sukanya Rakshak</title>
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
   </head>
  
